@@ -1,4 +1,8 @@
 * Version 0.8.0
+  * New: colinux-daemon -p pidFile stores ID of coLinux in file pidFile.
+    "colinux-console-fltk|nt -p pidFile" attach the monitor from stored
+    ID.  With this mechanism can open a /named/ console without knowing
+    the current ID (Process ID).  pidFile will removed on normal shutdown.
   * Added a nice colinux 3D logo image to the "About" box (Nlucas)
   * Kernel has been updated to 2.6.17
     (Thanks to Anders Eriksson for 2.6.13, 2.6.14, 2.6.15)
